@@ -3,7 +3,7 @@
 #  Date:           9-Nov-2020 jdw
 #
 #  Updated:
-#
+#   9-Feb-2023 aae  Update ChEMBL baseVersion to 31
 ##
 """
 Accessors for ChEMBL target activity data.
@@ -126,7 +126,7 @@ class ChEMBLTargetActivityProvider(StashableBase):
         super(ChEMBLTargetActivityProvider, self).__init__(self.__cachePath, [self.__dirName])
         self.__dirPath = os.path.join(self.__cachePath, self.__dirName)
         self.__mU = MarshalUtil(workPath=self.__cachePath)
-        baseVersion = 28
+        baseVersion = 31
         self.__version = baseVersion
         logger.info("ChEMBL API MAX_LIMIT %r", Settings.Instance().MAX_LIMIT)  # pylint: disable=no-member
         self.__aD, self.__allIdD = self.__reload(self.__dirPath, useCache)
